# abot

./: Notes.md
cad/: ABOT.SLDASM
cad/CHASSIS/: CASTER_WHEEL_CASE.SLDPRT  LOWER_PLATE.SLDPRT  UPPER_PLATE.SLDPRT  WHEEL_D65_W26.SLDPRT
cad/ELECTRONICS/RPI/: RPI_DUMMY.SLDPRT
cad/METALWARE/: STANDOFF_M3_12.SLDPRT  STANDOFF_M3_50.SLDPRT
cad/PARTS/: CUT_PLEX_PLATE_0.SLDPRT  CUT_PLEX_PLATE_1.SLDPRT
cad/SCREWS/: M3_12H.SLDPRT  M3_NUT.SLDPRT  M3_WASHER_NORMAL.SLDPRT  SCREWS_ASSM_1.SLDASM
cad/SENSORS/LIDAR/: LIDAR.SLDASM
ros/src/abot_base/: CMakeLists.txt  package.xml
ros/src/abot_base/launch/: abot_base.launch
ros/src/abot_base/src/: abot_base.cpp  abot_hardware_interface.h
ros/src/abot_control/: package.xml
ros/src/abot_control/config/: abot_controllers.yaml
ros/src/abot_description/launch/: bringup_movement.launch  display_model.launch  display_movement.launch  display_navigation.launch  display_sensors.launch  display_slam.launch
ros/src/abot_description/meshes/: abot_base.STL  abot_caster_wheel.STL  abot_left_wheel.STL  abot_right_wheel.STL  base_link.STL
ros/src/abot_description/rviz/: abot_model.rviz  abot_navigation.rviz  abot_sensors.rviz  abot_slam.rviz
ros/src/abot_description/urdf/: abot.xacro  abot_caster_wheel.xacro  abot_left_wheel.xacro  abot_matherials.xacro  abot_right_wheel.xacro  abot_sensors.xacro
ros/src/abot_driver/: CMakeLists.txt
ros/src/abot_driver/launch/: abot_drivers.launch  lidar.launch
ros/src/abot_driver/src/: dc_motors.cpp  encoder_wiring_pi.hpp  encoders.cpp
ros/src/abot_driver/src/test/: dc_motor_wiring_pi_test.cpp  encoders_test.cpp  encoders_velocity_test.cpp  friction_test.cpp  motors_friction_test.cpp
ros/src/abot_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
ros/src/abot_navigation/launch/: abot_navigation.launch  amcl.launch  move_base.launch
ros/src/abot_slam/config/: gmapping_params.yaml
ros/src/abot_slam/maps/: map1.pgm
ros/src/abot_teleop/launch/: abot_teleop.launch
ros/src/abot_teleop/src/: abot_teleop.cpp  abot_teleop.hpp
src/: Notes.md  README.md
src/abot_base/: CMakeLists.txt  package.xml
src/abot_base/launch/: base.launch  hardware_control.launch  lidar.launch
src/abot_base/src/: abot_base.cpp  abot_hardware_interface.h
src/abot_control/: CMakeLists.txt  package.xml
src/abot_control/config/: abot_control.yaml  abot_mobile.yaml  localization.yaml
src/abot_control/launch/: abot_control.launch
src/abot_description/: CMakeLists.txt  package.xml
src/abot_description/launch/: bring_up_mobile.launch  bring_up_mobile_all.launch  bring_up_mobile_mapping.launch  bring_up_mobile_movement.launch  bring_up_mobile_slam.launch  display_model.launch  display_remote.launch  display_remote_movement.launch  display_remote_navigate.launch  display_remote_navigation.launch  display_remote_slam.launch  display_sensors.launch
src/abot_description/meshes/: abot_base.STL  caster_wheel.STL  ir_b.STL  ir_bl.STL  ir_br.STL  ir_f.STL  ir_fl.STL  ir_fm.STL  ir_fr.STL  ir_l.STL  ir_r.STL  left_wheel.STL  right_wheel.STL
src/abot_description/rviz/: abot.rviz  abot_remote_mapping.rviz  abot_remote_movement.rviz  abot_remote_navigate.rviz  abot_remote_navigation.rviz  abot_remote_slam.rviz  abot_sensors.rviz
src/abot_description/urdf/: abot.xacro  caster_wheel.xacro  left_wheel.xacro  macros.xacro  matherials.xacro  right_wheel.xacro  sensors.xacro
src/abot_description/urdf/temp/: sensors.xacro
src/abot_driver/: CMakeLists.txt  package.xml
src/abot_driver/launch/: lidar.launch
src/abot_driver/src/: dc_motor_wiring_pi.hpp  dc_motors.cpp  encoder_wiring_pi.hpp  encoders.cpp  sensors_array.cpp  sensors_array.hpp  sharp_ir_GP2Y0A21SK.hpp  sharp_ir_GP2Y0A41SK.hpp  sharp_sensors.cpp
src/abot_driver/src/temp/: sharp_sensors.cpp
src/abot_driver/src/test/: dc_motor_wiring_pi_test.cpp  encoder_wiring_pi_test.cpp  max_vel_accel_test.cpp
src/abot_driver/src/utility/: gpio_expander_wiringpi.h  wiringPiI2C_utility.h
src/abot_navigation/: CMakeLists.txt  package.xml
src/abot_navigation/config/: costmap_common.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  planner.yaml  slam_gmapping_params.yaml
src/abot_navigation/config/temp/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml  slam_gmapping_params.yaml
src/abot_navigation/config/temp2/: planner.yaml
src/abot_navigation/launch/: amcl.launch  gmapping.launch  lidar.launch  move_base.launch  navigation.launch
src/abot_navigation/launch/temp2/: navigation.launch
src/abot_navigation/param/abot/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
src/abot_navigation/param/husky/: costmap_common.yaml  planner.yaml
src/abot_navigation/param/turtle/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
src/abot_navigation/src/: bumper_mutex.cpp
src/abot_slam/: CMakeLists.txt  package.xml
src/abot_slam/config/: gmapping_params.yaml
src/abot_slam/launch/: abot_gmapping.launch  abot_slam.launch
src/abot_slam/map/: map1.pgm  map1.yaml  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml
src/abot_slam/maps/: map1.pgm  map2.pgm  map3.yaml
src/abot_teleop/: CMakeLists.txt  package.xml
src/abot_teleop/launch/: abot_teleop.launch  rover_teleop.launch
src/abot_teleop/src/: abot_teleop.cpp  abot_teleop.hpp
