<?xml version="1.0"?>
<package format="2">
  <name>abot_base</name>
	<version>0.0.1</version>
	<description>The abot_base package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
	<buildtool_depend>catkin</buildtool_depend>
	<!-- build_depend -->
	<build_depend>controller_manager</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>hardware_interface</build_depend>
	<build_depend>rplidar_ros</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<!-- exec_depend -->
	<exec_depend>controller_manager</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>hardware_interface</exec_depend>
	<exec_depend>rplidar_ros</build_depend>
	<exec_depend>effort_controllers</exec_depend>
	<exec_depend>trajectory_msgs</exec_depend>
	<!-- ! -->
	<exec_depend>diff_drive_controller</exec_depend>
	<export></export>
</package>
