<?xml version="1.0"?>
<package>
	<name>abot_control</name>
	<version>0.0.1</version>
	<description>The abot_control package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
	<buildtool_depend>catkin</buildtool_depend>
	<!-- build_depend -->
	<build_depend>controller_manager</build_depend>
	<build_depend>hardware_interface</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<!-- run_depend -->
	<run_depend>controller_manager</run_depend>
	<run_depend>ros_controllers</run_depend>
	<run_depend>joint_state_controller</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>controller_manager</run_depend>
	<run_depend>hardware_interface</run_depend>
	<run_depend>roscpp</run_depend>
	<!-- temp -->
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>turtlebot_teleop</run_depend>
	<run_depend>depthimage_to_laserscan</run_depend>
	<!-- ! -->
	<run_depend>effort_controllers</run_depend>
	<export></export>
</package>
