<?xml version="1.0"?>
<package format="2">
	<name>abot_driver</name>
	<version>0.0.1</version>
	<description>The abot_driver package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
	<buildtool_depend>catkin</buildtool_depend>
	<!-- build_depend -->
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<!-- build_export_depend -->
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<!-- exec_depend -->
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<export></export>
</package>
