<?xml version="1.0"?>
<package>
	<name>abot_driver</name>
	<version>0.0.1</version>
	<description>The abot_driver package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>pcl_ros</build_depend>
  	<build_depend>roscpp</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>sensor_msgs</build_depend>
  	<build_depend>geometry_msgs</build_depend>
  	<build_depend>tf2</build_depend>
  	<build_depend>tf2_geometry_msgs</build_depend>
	<build_depend>rplidar_ros</build_depend>

  	<run_depend>roscpp</run_depend>
  	<run_depend>pcl_ros</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>sensor_msgs</run_depend>
  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>tf2</run_depend>
  	<run_depend>tf2_geometry_msgs</run_depend>
	<run_depend>rplidar_ros</run_depend>

	<export></export>
</package>
