<?xml version="1.0"?>
<package format="2">
	<name>abot_navigation</name>
	<version>0.0.1</version>
	<description>The abot_navigation package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
	<buildtool_depend>catkin</buildtool_depend>
	<!-- build_depend -->
	<build_depend>roscpp</build_depend>
  	<build_depend>std_msgs</build_depend>

	<build_depend>rplidar_ros</build_depend>

  	<build_depend>move_base</build_depend>
  	<build_depend>actionlib</build_depend>
  	<build_depend>geometry_msgs</build_depend>
  	<build_depend>nav_msgs</build_depend>
  	<build_depend>tf</build_depend>
	  
	<build_depend>dwa_local_planner</build_depend>
	
	<!-- exec_depend -->
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<exec_depend>rplidar_ros</exec_depend>
	<exec_depend>move_base</exec_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>tf</exec_depend>

	<exec_depend>dwa_local_planner</exec_depend>

	<export></export>
</package>
