<?xml version="1.0"?>
<package format="2">
	<name>abot_navigation</name>
	<version>0.0.1</version>
	<description>The abot_navigation package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend> -->
  <!-- Disabling till package is released -->
  <!-- <run_depend>frontier_exploration</run_depend> -->
  <!-- <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend> -->
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

	<export></export>
</package>
