<?xml version="1.0"?>
<package format="2">
	<name>abot_slam</name>
	<version>0.0.1</version>
	<description>The abot_slam package</description>
	<maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
	<license>todo</license>
	<!-- buildtool_depend -->
	<buildtool_depend>catkin</buildtool_depend>
	<!-- build_depend -->
	<build_depend>roscpp</build_depend>
  	<build_depend>sensor_msgs</build_depend>
	<!-- exec_depend -->
	<export></export>
</package>
